<resources>
    <string name="app_name" translatable="false">Frost Web</string>
    <string name="app_version" translatable="false">alpha03</string>

    <string name="new_tab_url" translatable="false">frostweb://newtab</string>

    <string name="search_hint">Search or enter web address</string>
    <string name="download">Download</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="go">Go</string>
    <string name="more">More</string>

    <string name="go_home">Go to homepage</string>
    <string name="tabs">Tabs</string>
    <string name="new_tab">New tab</string>
    <string name="empty_page">Empty Page</string>

    <string name="history">History</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>

    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="interface_settings">Interface</string>
    <string name="browser">Browser</string>

    <string name="lang">Language</string>
    <string name="lang_def">System Language</string>
    <string name="lang_en">English</string>
    <string name="lang_tr">Turkish</string>

    <string name="theme">App Theme</string>
    <string name="theme_def">System Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    
    <string name="startup">Startup</string>
    <string name="restore_session">Restore previous session</string>
    <string name="load_homepage">Load my homepage</string>
    <string name="load_empty_page">Load empty page</string>

    <string name="homepage">Homepage</string>
    <string name="homepage_dialog">Set your homepage</string>

    <string name="search_engine">Search Engine</string>
    <string name="google" translatable="false">Google</string>
    <string name="yandex" translatable="false">Yandex</string>
    <string name="bing" translatable="false">Bing</string>
    <string name="yahoo" translatable="false">Yahoo</string>

    <string name="enable_javascript">Enable JavaScript</string>
    <string name="zoom">Page Zoom</string>
    <string name="force_dark">Dark Web Pages</string>
    <string name="force_dark_requires_q">Dark Web Pages (Requires Android 10)</string>
    <string name="force_dark_summary">Forces web pages to load in dark mode (Experimental)</string>

    <string name="loading">Loading…</string>

    <string name="permission_required">Permission required</string>
    <string name="storage_permission_explanation">External storage access is required to download file.</string>
    <string name="storage_permission_denied">Storage permission denied</string>

    <string name="open_in_new_tab">Open in new tab</string>
    <string name="copy_link_address">Copy link address</string>
    <string name="copy_link_text">Copy link text</string>
    <string name="download_image">Download image</string>
    <string name="open_image_in_new_tab">Open image in new tab</string>
</resources>
