<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".BrowserActivity">

    <FrameLayout
        android:id="@+id/baseFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchBar" />

    <LinearLayout
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingStart="4dp"
        android:paddingTop="8dp"
        android:paddingEnd="4dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btBack"
            style="@style/ActionBarButton"
            android:contentDescription="@string/back"
            android:onClick="goBack"
            android:src="@drawable/icon_back"
            android:tint="@color/white" />

        <ImageButton
            android:id="@+id/btForward"
            style="@style/ActionBarButton"
            android:contentDescription="@string/forward"
            android:onClick="goForward"
            android:src="@drawable/icon_forward"
            android:tint="@color/white" />

        <EditText
            android:id="@+id/linkInput"
            style="@style/SearchEditText"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/link_bg"
            android:textColor="@color/white"
            android:textColorHint="@color/colorPrimaryLighter" />

        <ImageButton
            android:id="@+id/btGo"
            style="@style/ActionBarButton"
            android:contentDescription="@string/go"
            android:onClick="go"
            android:src="@drawable/icon_refresh"
            android:tint="@color/white" />

        <ImageButton
            android:id="@+id/btMore"
            style="@style/ActionBarButton"
            android:contentDescription="@string/more"
            android:onClick="popupMore"
            android:src="@drawable/icon_more"
            android:tint="@color/white" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="top"
        android:indeterminate="false"
        android:max="100"
        android:progressDrawable="@drawable/progressbar_states"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/searchBar" />

</androidx.constraintlayout.widget.ConstraintLayout>