<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="8dp"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:id="@+id/menuBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btHome"
            style="@style/ActionBarButton"
            android:contentDescription="@string/go_home"
            android:onClick="goHome"
            android:src="@drawable/icon_home"
            android:tint="@color/colorFgAlt" />

        <FrameLayout
            android:id="@+id/btTabsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btTabs"
                style="@style/ActionBarButton"
                android:contentDescription="@string/tabs"
                android:onClick="showTabs"
                android:src="@drawable/icon_tabs"
                android:tint="@color/colorFgAlt" />

            <TextView
                android:id="@+id/txtTabAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="2dp"
                android:clickable="false"
                android:text="0"
                android:textColor="@color/colorFgAlt"
                android:textSize="10sp"
                android:textStyle="bold" />
        </FrameLayout>

        <ImageButton
            android:id="@+id/btMore"
            style="@style/ActionBarButton"
            android:layout_marginEnd="0dp"
            android:contentDescription="@string/more"
            android:onClick="popupMore"
            android:src="@drawable/icon_more"
            android:tint="@color/colorFgAlt" />

        <ImageButton
            android:id="@+id/btGo"
            style="@style/ActionBarButton"
            android:layout_marginEnd="0dp"
            android:contentDescription="@string/go"
            android:onClick="go"
            android:src="@drawable/icon_search"
            android:tint="@color/colorFgAlt"
            android:visibility="gone" />

    </LinearLayout>

    <ImageView
        android:id="@+id/welcomeFrostWebIcon"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:src="@drawable/icon_app"
        android:tint="@color/colorFgAlt"
        app:layout_constraintBottom_toTopOf="@id/linkInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menuBar" />

    <EditText
        android:id="@+id/linkInput"
        style="@style/SearchEditText"
        android:layout_margin="48dp"
        android:layout_weight="1"
        android:background="@drawable/link_bg_transition"
        android:elevation="8dp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorTextHint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>